# ibvs_controller

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
controller/: CL_class.py  bfmtch.py  controller.py  eff_reg.py  features_extr.py  graph.py  micro_test.py  model.py  motor.py  test.py
gazebo/: diff_world.launch  gzb_wrld.world  gzb_wrld_2.world  init.world  init_burger.world  multicontrol.launch  pos_world.launch  pos_world_contr.launch  pos_world_contr_b.launch  pos_world_contr_b_speed.launch  pos_world_contr_ni.launch  predator_control.yaml
ros2connect/: gazebo_connect.py
